--- a/lab3/pages/calculator/calculator.html
+++ b/lab3/pages/calculator/calculator.html
@@ -4,24 +4,33 @@
 <head> 
     <title>калькулятор</title>
     <!-- указываем, что файл style.css содержит таблицу стилей (stylesheet) -->
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css"> 
   </head>
 
 <body class="my-body">
   <div> <!-- div - это базовый html-контейнер, который может содержать в себе другие html-элементы. -->
 
     <div>
-      <nav class="navbar">
-        <div class="navbar-content">
-          <img src="zoo.png" class="logo">
-          <ul class="menu">
-              <li><a href="https://kldzoo.ru/visit-and-tickets/">Посещения и билеты</a></li>
-              <li><a href="https://kldzoo.ru/affiche/">Афиша</a></li>
-              <li><a href="https://kldzoo.ru/animals-and-park/">Животные</a></li>
-              <li><a href="https://github.com/Liza05444/PSP">Об авторе</a></li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">  <!-- Добавлен класс mb-3 -->
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../../index.html">
+                    <img src="../../images/zoo.png" class="d-inline-block align-top" style="height: 50px;">
+                </a>
+                
+                <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                    <ul class="navbar-nav w-100 d-flex justify-content-between">
+                        <li class="nav-item"><a class="nav-link text-white" href="https://kldzoo.ru/visit-and-tickets/">Посещения и билеты</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="https://kldzoo.ru/affiche/">Афиша</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="https://kldzoo.ru/animals-and-park/">Животные</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="calculator.html">Калькулятор</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="../../index.html">Домой</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="https://github.com/Liza05444/PSP_2025">Об авторе</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="mb-3"></div>
     </div>
     
     <!-- блок с экраном калькулятора, где будет выводиться результат вычислений. -->
@@ -48,7 +57,7 @@
       </div>
 
       <div>  
-        <button id="btn_op_clear" class="my-btn secondary">C</button>    <!-- про тэг кнопки: https://www.w3schools.com/tags/tag_button.asp -->
+        <button id="btn_op_clear" class="my-btn secondary">C</button>    
         <button id="btn_op_sign" class="my-btn secondary">+/-</button>
         <button id="btn_op_percent" class="my-btn secondary">%</button>
         <button id="btn_op_div" class="my-btn secondary">/</button>
