--- a/lab4/example-nestjs/public/pages/calculator/calculator.html
+++ b/lab4/example-nestjs/public/pages/calculator/calculator.html
@@ -2,11 +2,11 @@
 <html>
 
 <head> 
-    <title>калькулятор</title>
-    <!-- указываем, что файл style.css содержит таблицу стилей (stylesheet) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css"> 
-  </head>
+  <meta charset="UTF-8">
+  <title>калькулятор</title>
+  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
 
 <body class="my-body">
   <div> <!-- div - это базовый html-контейнер, который может содержать в себе другие html-элементы. -->
